# dogelayer

./: .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml
changelog/: v1.0.1.md
docs/: SUBNET_80_MIGRATION.md  running_miner.md  running_validator.md
dogelayer/core/: constants.py  redis_client.py
dogelayer/core/chain_data/: pool_info.py
dogelayer/core/pool/: __init__.py  pool.py  pool_difficulty.py
dogelayer/core/pool/braiins/: api.py  config.py  pool.py
dogelayer/core/pool/metrics/: __init__.py  braiins.py  dogelayer_proxy.py
dogelayer/core/pool/proxy/: __init__.py  api.py  config.py  pool.py
dogelayer/core/pricing/: __init__.py  coingecko.py  coinmarketcap.py  hash_price.py  network_stats.py  price.py
dogelayer/core/storage/: json_storage.py  redis_storage.py
dogelayer/miner/: .env.miner.example  Dockerfile  README-Docker.md  __init__.py  docker-compose.yml  env.example  miner.py  miner_enhanced.py  miner_with_proxy.py  simple_miner.py  storage.py
dogelayer/miner/proxy/: __init__.py
dogelayer/miner/proxy/braiins_farm/: controller.py
dogelayer/miner/proxy/dogelayer_proxy/: __init__.py  controller.py
dogelayer/miner/proxy/dogelayer_proxy/config/: config.toml.example
dogelayer/miner/proxy/dogelayer_proxy/docker/: docker-compose.yml
dogelayer/miner/proxy/dogelayer_proxy/src/: __init__.py  constants.py  miner_session.py
dogelayer/miner/proxy/taohash_proxy/: controller.py
dogelayer/miner/proxy/taohash_proxy/static/: index.html
dogelayer/validator/: .env.validator.example  Dockerfile  README-Docker.md  README.md  __init__.py  __main__.py  docker-compose.yml  env.example  simple_validator.py  storage.py  validator.py
