[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dogelayer-subnet"
version = "1.0.0"
description = "DogeLayer Subnet - Decentralized mining rental marketplace on Bittensor"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DogeLayer Team", email = "contact@dogelayer.io"}
]
keywords = ["bittensor", "validator", "miner", "mining", "blockchain", "dogelayer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "bittensor>=9.0.0",
    "bittensor-commit-reveal",
    "bittensor-wallet>=1.1.0",
    "python-dotenv>=0.21.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "requests>=2.25.0",
    "psutil>=5.9.0",
    "tabulate~=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://dogelayer.io"
Repository = "https://github.com/your-org/dogelayer-subnet.git"
Documentation = "https://docs.dogelayer.io"
Issues = "https://github.com/your-org/dogelayer-subnet/issues"

[project.scripts]
dogelayer-validator = "dogelayer.validator.validator:main"
dogelayer-miner = "dogelayer.miner.miner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dogelayer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
